# cmakeStudy

./: README.md
01-Basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-Basic/B-hello-headers/: CMakeLists.txt
01-Basic/B-hello-headers/include/static/: Hello.h
01-Basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-Basic/C-static-library/: CMakeLists.txt
01-Basic/C-static-library/include/: Hello.h
01-Basic/C-static-library/src/: Hello.cpp
01-Basic/D-shared-library/: CMakeLists.txt
01-Basic/D-shared-library/include/: Hello.h
01-Basic/D-shared-library/src/: Hello.cpp  main.cpp
01-Basic/E-installing/: CMakeLists.txt  cmake_example.conf
01-Basic/E1-installingFile/: CMakeLists.txt  config.xml  run.sh
01-Basic/E1-installingFile/include/: Hello.h
01-Basic/E1-installingFile/src/: Hello.cpp  main.cpp
01-Basic/E2-installingDirectory/api2/: Test2.h
01-Basic/E2-installingDirectory/src/: Test1.cpp  Test2.cpp  main.cpp
01-Basic/E3-installingScript/: CMakeLists.txt
01-Basic/E3-installingScript/api1/: Test1.h
01-Basic/E4-installingScriptCode/: CMakeLists.txt
01-Basic/E4-installingScriptCode/cmake/: install_script.cmake
01-Basic/E4-installingScriptCode/src/: main.cpp
01-Basic/E5-installExport/ProjectA/: CMakeLists.txt  HelloATargetConfig.cmake.in
01-Basic/E5-installExport/ProjectA/include/: HelloA.h
01-Basic/E5-installExport/ProjectA/src/: HelloA.cpp  main.cpp
01-Basic/E5-installExport/ProjectB/: CMakeLists.txt  main.cpp
01-Basic/F-buildtype/: CMakeLists.txt  main.cpp
